test/tests/stages/7_compound_statements/valid/inner_uninitialized.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(4)
  ;
  {
  int
  identifier(x)
  ;
  }
  return
  identifier(x)
  ;
  }
