test/tests/stages/7_compound_statements/invalid_parse/missing_semicolon.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(4)
  ;
  {
  identifier(a)
  =
  const int(5)
  ;
  return
  identifier(a)
  }
  }
